[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/font_subheader.tres" type="FontFile" id=1]
[ext_resource path="res://Images/PersonPortrait/default-male-officer.jpg" type="Texture2D" id=2]
[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://UIMain/PersonDialog/PersonDialog.gd" type="Script" id=4]
[ext_resource path="res://UIMain/PersonDialog/OccupyArchitecture.wav" type="AudioStream" id=5]
[ext_resource path="res://UIMain/PersonDialog/PersonDead.wav" type="AudioStream" id=6]
[ext_resource path="res://UIMain/PersonDialog/FactionDestroyed.wav" type="AudioStream" id=7]

[node name="PersonDialog" type="Control"]
offset_right = 800.0
offset_bottom = 192.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2( 0.375, 0.375 )
texture = ExtResource( 2 )

[node name="SpeakerPanel" type="Panel" parent="."]
offset_left = 192.0
offset_right = 312.0
offset_bottom = 36.0

[node name="Speaker" type="Label" parent="SpeakerPanel"]
offset_right = 120.0
offset_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "旁白"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="DialogPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
text = "[color=red]劉表軍[/color]滅亡了"
text = "劉表軍滅亡了"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="OccupyArchitecture" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PersonDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="FactionDestroyed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
